done demo routing

--- a/src/app/product/product-param/product-param.component.html
+++ b/src/app/product/product-param/product-param.component.html
@@ -10,3 +10,6 @@
 <p>
   <a [routerLink]="['/product', 'param', 99]">Product ID 99</a>
 </p>
+<div>
+  <button (click)="openProduct(900)">Product id 900</button>
+</div>
